pufferfish has not updated for a couple of versions and is likely to not get updated, so removing references to it